# transformer2-gemma3n

./: .env.example  .gitignore  AUTHENTICATION.md  GEMMA3N_TROUBLESHOOTING.md  GEMMA_3N_SETUP_GUIDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test_framework.py  test_gemma_loading.py
transformer_squared/: __init__.py  requirements.txt
transformer_squared/adaptation/: __init__.py  cem_adapter.py  expert_system.py
transformer_squared/examples/: __init__.py  basic_usage.py  gemma3_multimodal_usage.py
transformer_squared/svf/: __init__.py  singular_value_finetuning.py
transformer_squared/utils/: __init__.py  model_utils.py
