[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-squared-gemma3n"
version = "1.0.0"
description = "Self-adaptive LLM framework with Google's Gemma 3n E4B model"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Transformer-Squared Team", email = "contact@transformer-squared.ai"}
]
maintainers = [
    {name = "Transformer-Squared Team", email = "contact@transformer-squared.ai"}
]
keywords = [
    "transformer", "gemma", "gemma-3n", "self-adaptive", "llm",
    "machine-learning", "deep-learning", "nlp", "artificial-intelligence",
    "parameter-efficient", "fine-tuning", "expert-systems"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "accelerate>=0.24.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.19.0",
    "safetensors>=0.3.3",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "peft>=0.6.0",
    "wandb>=0.15.0",
    "tensorboard>=2.14.0",
    "einops>=0.7.0",
    "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.scripts]
transformer-squared-demo = "transformer_squared.examples.basic_usage:main"
transformer-squared-test = "test_framework:main"

[project.urls]
Homepage = "https://github.com/transformer-squared/gemma3n"
Repository = "https://github.com/transformer-squared/gemma3n"
Documentation = "https://transformer-squared.readthedocs.io/"
"Bug Reports" = "https://github.com/transformer-squared/gemma3n/issues"
"Research Paper" = "https://arxiv.org/html/2501.06252v3"
"Gemma 3n Model" = "https://huggingface.co/google/gemma-3n-E4B-it-litert-preview"

[tool.setuptools]
packages = ["transformer_squared"]
include-package-data = true

[tool.setuptools.package-data]
transformer_squared = [
    "requirements.txt",
    "examples/*.py",
    "configs/*.yaml",
    "configs/*.json",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 